hlstatsx/hlstatsx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hlstatsx
spec:
  tls:
  - hosts:
    - stats.burntsheep.com
    secretName: nginx-certs
  rules:
  - host: stats.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hlstatsx
          servicePort: 80
      - path: /.well-known
        backend:
          serviceName: letsencrypt
          servicePort: 80
